messageService/src/main/java/com/example/messageservice/exception/commonException/error/ErrorCode.java
package com.example.messageservice.exception.commonException.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    HttpStatus getHttpStatus();
    String getMessage();
}
